--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -124,6 +124,7 @@
             <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
             <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
             <li><a href="https://go-tl.com/roster/roster.html">Sistema Jestaun Lista Eskola (School Teacher/Student Roster System)</a></li>
+            <li><a href="https://go-tl.com/roster/attendance.html">Sistema Rejistu Prezensa atu uza ho Sistema Hela (Attendance Tracking System for use with the Roster System)</a></li>
             <li><a href="https://go-tl.com/math/geometry.html">Kalkúlu Jeometria / (Geometry Calculator)</a></li>
             <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
             <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
@@ -174,9 +175,11 @@
     <div class="section">
         <h2>Rekursu sira ne'ebé aumenta</h2>
         <ul>
+            <li><a href="https://translate.tetumdili.com/">Tetum AI</a></li>
             <li><a href="http://www.tetundit.tl/publications.html">Dili Institute of Technology</a></li>
             <li><a href="https://discord.gg/DaBJG2Gn">Discord: Tetun Learners!</a></li>
             <li><a href="https://www.youtube.com/@TeknologiPopuler">YouTube: Tecknologi Populer</a></li>
+            <li><a href="https://github.com/topics/tetum">Python Tetum</a></li>
             <li><a href="https://andykline.substack.com/?r=f5pev&utm_campaign=subscribe-page-share-screen&utm_medium=web">Timor Leste Blog: Andy Kline</a></li>
         </ul>
     </div>
