add teflbot to readme

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -143,6 +143,7 @@
             <li><a href="https://go-tl.com/links.html">Ligasaun Timor-Leste nian (Timor Leste Links)</a></li>
             <li><a href="https://go-tl.com/budget.html">Kalkuladór Orsamentu Tetum (Tetum Budget Calculator)</a></li>            
             <li><a href="https://github.com/ddtraveller/TEFLTools/blob/main/README.md">Fonte Github (Github Source)</a></li>
+            <li><a href="https://github.com/ddtraveller/TEFLbot">Software Konversa nian (Conversation Software)</a></li>
         </ul>
     </div>
 
