translation updates for index.html

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -235,10 +235,10 @@
             MIN_FALL_SPEED = MAX_FALL_SPEED / 4;
         });
     
-        sliderContainer.appendChild(document.createTextNode('Star Count: '));
+        sliderContainer.appendChild(document.createTextNode('Kontajen Fitun nian '));
         sliderContainer.appendChild(starCountSlider);
         sliderContainer.appendChild(document.createElement('br'));
-        sliderContainer.appendChild(document.createTextNode('Star Speed: '));
+        sliderContainer.appendChild(document.createTextNode('Velosidade Fitun nian '));
         sliderContainer.appendChild(starSpeedSlider);
     
         document.body.appendChild(sliderContainer);
