bedtime story archive

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domin Krokodil Metan</title>
+    <link rel="icon" href="https://tl-web.s3.us-west-2.amazonaws.com/images/flag.jpg" type="image/png">
     <style>
         body {
             font-family: 'Lato', Arial, sans-serif;
@@ -120,30 +121,33 @@
     <p>Welcome to this comprehensive resource hub designed to support teachers, students and the vibrant communities of Timor-Leste. This collection of materials aims to foster sustainable development, cultural exchange, and mutual learning between English speakers and Timorese people.</p>
 
     <div class="section">
-        <h2>Rekursu Prinsipal</h2>
+        <h2>Rekursu sira Sistema Jestaun Aprendizajen nian</h2>
         <ul>
-            <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
-            <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
             <li><a href="https://go-tl.com/roster/roster.html">Sistema Jestaun Lista Eskola (School Teacher/Student Roster System)</a></li>
             <li><a href="https://go-tl.com/roster/attendance.html">Sistema Rejistu Prezensa atu uza ho Sistema Hela (Attendance Tracking System for use with the Roster System)</a></li>
-            <li><a href="https://go-tl.com/math/geometry.html">Kalkúlu Jeometria / (Geometry Calculator)</a></li>
-            <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
             <li><a href="https://go-tl.com/exams/">Konstrutór Ezame nian (Exam Builder)</a></li>
             <li><a href="https://go-tl.com/exams/take-exam">Sistema tuir Ezame (Take Exams)</a></li>
+            <li><a href="https://go-tl.com/gradebook.html">Livru Nota Online ba Mestri sira (Online Gradebook for Teachers)</a></li>
             <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
             <li><a href="https://content.go-tl.com/quizzes/quiz.html">Teste Eskolla Multiplu (Multiple Choice Quizzes)</a></li>
             <li><a href="https://content.go-tl.com/quizzes_fitb/quiz.html">Teste Preenxe iha Laran (Fill in the Blank Quizzes)</a></li>
-            <li><a href="https://go-tl.com/gradebook.html">Livru Nota Online ba Mestri sira (Online Gradebook for Teachers)</a></li>
-            <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
+            <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
+            <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
+            <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
+            <li><a href="https://go-tl.com/math/geometry.html">Kalkúlu Jeometria / (Geometry Calculator)</a></li>
+        </ul>
+        <h2>Rekursu sira Apoiu nian</h2>
+        <ul>
             <li><a href="https://go-tl.com/bedtime.html">Noite Di'ak Timor - Istoria Tuku Laran ba Labarik Ki'ik sira (Good Night Timor - bedtime stories)</a></li>
             <li><a href="https://go-tl.com/images/images.html">Imajen ne'ebé kria husi AI ba artista sira kona-ba Timor husi gerador tempu tuku lulik (AI generated images for artists about Timor from the bedtime generator)</a></li>            
+            <li><a href="https://go-tl.com/stories/archive.html">Istória sira antes toba nian (Past Bedtime Stories)</a></li>
+            <li><a href="https://go-tl.com/links.html">Ligasaun Loron-loron Timor Leste (Timor Leste Daily Links)</a></li>
+            <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
             <li><a href="https://go-tl.com/draw.html">Pájina Web Desenho nian (Drawing Web Page)</a></li>
             <li><a href="https://go-tl.com/coffee.html">Kalkuladór Lukru ba Kafé Hemu (Coffee Drink Profit Calculator)</a></li>
             <li><a href="https://go-tl.com/mnews.html">Notísia husi Inan Ain (News from Mother Earth)</a></li>
             <li><a href="https://go-tl.com/where.html">Buka Ita-nia Fatin Atuál (Get Your Current Location)</a></li>
-            <li><a href="https://go-tl.com/ask.html">Buka Google Antropik Tetum (Tetum Google Anthropic Search)</a></li>
             <li><a href="https://go-tl.com/drums.html">Máquina Tuku Drum ho Looper (Drum Machine with Looper)</a></li>
-            <li><a href="https://go-tl.com/links.html">Ligasaun Timor-Leste nian (Timor Leste Links)</a></li>
             <li><a href="https://go-tl.com/budget.html">Kalkuladór Orsamentu Tetum (Tetum Budget Calculator)</a></li>            
             <li><a href="https://github.com/ddtraveller/TEFLTools/blob/main/README.md">Fonte Github (Github Source)</a></li>
             <li><a href="https://github.com/ddtraveller/TEFLbot">Software Konversa nian (Conversation Software)</a></li>
