sounds for story

--- a/scripts/bedtime_archive/archive.html
+++ b/scripts/bedtime_archive/archive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arkivu Istória sira Timór-Leste nian</title>
+    <link rel="icon" href="https://tl-web.s3.us-west-2.amazonaws.com/images/flag.jpg" type="image/png">    
     <style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
