--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -199,6 +199,8 @@
     </div>
 
     <div class="footer">
+        <p>Software hotu-hotu iha sítiu ida-ne'e no konteúdu asosiadu ho repo github open source ne'ebé liga iha kraik. Testu istória no imajen sira iha https://go-tl.com/stories/archive.html maka AI ne'ebé maka hamosu no livre atu uza.</p>
+        <p>All software on this site and content are associated with an open source github repo linked below. Story text and images in https://go-tl.com/stories/archive.html are AI generated and are free to use. Kódigu jeralmente disponivel liután bainhira haree fonte iha pájina.</p>
         <p>Projetu ne’e dedika ba haburas dezenvolvimentu sustentável, prezerva kultura Timor nian, no harii relasaun ne’ebé dura entre ema hotu. Hodi tau hamutuk matenek tradisionál ho téknika modernu, mai ita kria futuru ne’ebé nabilan liu ba Timor-Leste.</p>
     </div>
 
