--- a/scripts/trivia/trivia.html
+++ b/scripts/trivia/trivia.html
@@ -1,112 +1,245 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tet">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade School Trivia Game</title>
+    <title>Jogu Trivia Timor-Leste nian</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #1a1a2e;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            overflow: hidden;
         }
-        #question {
-            font-size: 24px;
-            margin-bottom: 20px;
+        .container {
+            background-color: #16213e;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            padding: 2rem;
+            width: 90%;
+            max-width: 600px;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+        h1 {
+            color: #e94560;
+            margin-bottom: 1.5rem;
+        }
+        #pergunta {
+            font-size: 1.2rem;
+            margin-bottom: 1.5rem;
+            color: #ffffff;
         }
         #options {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 10px;
+            margin-bottom: 1.5rem;
         }
         button {
             padding: 10px;
-            font-size: 18px;
+            font-size: 1rem;
             cursor: pointer;
+            background-color: #0f3460;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #e94560;
+        }
+        button:disabled {
+            background-color: #533483;
+            cursor: not-allowed;
         }
         #result {
-            margin-top: 20px;
+            margin-top: 1rem;
             font-weight: bold;
+            font-size: 1.1rem;
         }
         #score {
-            margin-top: 20px;
-            font-size: 20px;
+            margin-top: 1rem;
+            font-size: 1.1rem;
+        }
+        #nextQuestion {
+            margin-top: 1rem;
+        }
+        .star {
+            position: fixed;
+            background-color: #fff;
+            width: 2px;
+            height: 2px;
+            z-index: 0;
+        }
+        #starMenu {
+            position: fixed;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(22, 33, 62, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 2;
+        }
+        #starSlider {
+            width: 100px;
+            transform: rotate(-90deg);
+            margin: 50px 0;
         }
     </style>
 </head>
 <body>
-    <h1>Grade School Trivia Game</h1>
-    <div id="question"></div>
-    <div id="options"></div>
-    <div id="result"></div>
-    <div id="score">Score: <span id="scoreValue">0</span></div>
-    <button id="nextQuestion" style="display: none;">Next Question</button>
+    <div class="container">
+        <h1>Jogu Trivia Timor-Leste nian</h1>
+        <div id="pergunta"></div>
+        <div id="options"></div>
+        <div id="result"></div>
+        <div id="score">Pontu: <span id="scoreValue">0</span> / <span id="questionCount">0</span></div>
+        <button id="nextQuestion" style="display: none;">Pergunta Tuir Mai</button>
+    </div>
+
+    <div id="starMenu">
+        <input type="range" id="starSlider" min="0" max="100" value="50">
+    </div>
 
     <script>
         let questions = [];
-        let currentQuestionIndex = 0;
+        let usedQuestions = new Set();
         let score = 0;
+        let questionCount = 0;
+
+        const cheeringSounds = [
+            'https://tl-web.s3.us-west-2.amazonaws.com/sounds/cheering-and-clapping-crowd.mp3',
+            'https://tl-web.s3.us-west-2.amazonaws.com/sounds/crowd-clapping-100071.mp3',
+            'https://tl-web.s3.us-west-2.amazonaws.com/sounds/crowd-cheering.mp3',
+            'https://tl-web.s3.us-west-2.amazonaws.com/sounds/short-crowd-applause.mp3'
+        ];
+
+        function playRandomCheeringSound() {
+            const randomIndex = Math.floor(Math.random() * cheeringSounds.length);
+            const audio = new Audio(cheeringSounds[randomIndex]);
+            audio.play();
+        }
 
         async function loadQuestions() {
             try {
                 const response = await fetch('trivia_questions.json');
                 questions = await response.json();
-                showQuestion();
+                showRandomQuestion();
             } catch (error) {
                 console.error('Error loading questions:', error);
-                document.getElementById('question').textContent = 'Error loading questions. Please try again later.';
+                document.getElementById('pergunta').textContent = 'Erro iha loke pergunta sira. Favor koko fali.';
             }
         }
 
-        function showQuestion() {
-            const question = questions[currentQuestionIndex];
-            document.getElementById('question').textContent = question.question;
+        function getRandomQuestion() {
+            if (usedQuestions.size === questions.length) {
+                return null; // All questions have been used
+            }
+            let randomIndex;
+            do {
+                randomIndex = Math.floor(Math.random() * questions.length);
+            } while (usedQuestions.has(randomIndex));
+            usedQuestions.add(randomIndex);
+            return questions[randomIndex];
+        }
+
+        function showRandomQuestion() {
+            const question = getRandomQuestion();
+            if (!question) {
+                endGame();
+                return;
+            }
+            questionCount++;
+            document.getElementById('pergunta').textContent = question.pergunta;
             const optionsContainer = document.getElementById('options');
             optionsContainer.innerHTML = '';
             question.options.forEach((option, index) => {
                 const button = document.createElement('button');
                 button.textContent = option;
-                button.onclick = () => checkAnswer(index);
+                button.onclick = () => checkAnswer(index, question);
                 optionsContainer.appendChild(button);
             });
             document.getElementById('result').textContent = '';
             document.getElementById('nextQuestion').style.display = 'none';
+            document.getElementById('questionCount').textContent = questionCount;
         }
 
-        function checkAnswer(selectedIndex) {
-            const question = questions[currentQuestionIndex];
+        function checkAnswer(selectedIndex, question) {
             const resultElement = document.getElementById('result');
             const buttons = document.querySelectorAll('#options button');
             buttons.forEach(button => button.disabled = true);
 
-            if (selectedIndex === question.correctAnswer) {
-                resultElement.textContent = 'Correct!';
-                resultElement.style.color = 'green';
+            if (selectedIndex === question["Resposta loos"]) {
+                resultElement.textContent = 'Loos!';
+                resultElement.style.color = '#4CAF50';
                 score++;
+                playRandomCheeringSound();
             } else {
-                resultElement.textContent = `Sorry, the correct answer was: ${question.options[question.correctAnswer]}`;
-                resultElement.style.color = 'red';
+                resultElement.textContent = `Deskulpa, resposta loos mak: ${question.options[question["Resposta loos"]]}`;
+                resultElement.style.color = '#e94560';
             }
 
             document.getElementById('scoreValue').textContent = score;
             document.getElementById('nextQuestion').style.display = 'block';
         }
 
-        document.getElementById('nextQuestion').addEventListener('click', () => {
-            currentQuestionIndex++;
-            if (currentQuestionIndex < questions.length) {
-                showQuestion();
-            } else {
-                document.getElementById('question').textContent = 'Game Over!';
-                document.getElementById('options').innerHTML = '';
-                document.getElementById('result').textContent = `Final Score: ${score} out of ${questions.length}`;
-                document.getElementById('nextQuestion').style.display = 'none';
-            }
-        });
+        function endGame() {
+            document.getElementById('pergunta').textContent = 'Jogu Remata!';
+            document.getElementById('options').innerHTML = '';
+            document.getElementById('result').textContent = `Pontu Ikus: ${score} husi ${questionCount}`;
+            document.getElementById('nextQuestion').style.display = 'none';
+        }
+
+        document.getElementById('nextQuestion').addEventListener('click', showRandomQuestion);
 
         loadQuestions();
+
+        // Falling stars animation
+        function createStar() {
+            const star = document.createElement('div');
+            star.className = 'star';
+            star.style.left = Math.random() * 100 + 'vw';
+            star.style.top = '-5px';
+            star.style.animationDuration = Math.random() * 3 + 2 + 's';
+            star.style.animationName = 'fall';
+            star.style.animationTimingFunction = 'linear';
+            star.style.animationIterationCount = 'infinite';
+            document.body.appendChild(star);
+        }
+
+        let starInterval;
+        const starSlider = document.getElementById('starSlider');
+
+        function updateStars() {
+            clearInterval(starInterval);
+            document.querySelectorAll('.star').forEach(star => star.remove());
+            if (starSlider.value > 0) {
+                starInterval = setInterval(createStar, 100 - starSlider.value);
+            }
+        }
+
+        starSlider.addEventListener('input', updateStars);
+        updateStars();
+
+        // Add falling animation
+        const style = document.createElement('style');
+        style.textContent = `
+            @keyframes fall {
+                to {
+                    transform: translateY(100vh);
+                }
+            }
+        `;
+        document.head.appendChild(style);
     </script>
 </body>
 </html>
