save to disk - translate tweak

--- a/scripts/bedtime_editor/editor.html
+++ b/scripts/bedtime_editor/editor.html
@@ -172,7 +172,7 @@ Halo mudansa no klik Submete atu rai mudansa sira iha arkivu.</div>
         <p></p>
         <input type="password" id="passwordField" placeholder="Hatama senha">
         <button type="submit" id="saveButton">Rai Mudansa sira</button>
-        <button type="button" id="saveToDiskButton">Save to Disk</button>
+        <button type="button" id="saveToDiskButton">Rai iha Disku</button>
     </form>
     <div id="story-grid"></div>
     <script>
